--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <header>
+        <div id="logo">
+            <img src="C:\Users\Joaquin Andres\Desktop\datafund\ECIEM.png" alt="ECIEM" width="250">
+        </div>
+    </header>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
