cambio color titulo

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <div id="content">
     {% block content %}
    
-    <h1>Descubre los Fondos Mutuos en Chile</h1>
+    <h1 style="color: blue; font-size: 40px;">Descubre los Fondos Mutuos en Chile</h1>
 
     <h2>Inversión Inteligente para Crecimiento Financiero</h2>
   
