se añade el nuevo link

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,6 +37,9 @@
                 <li>
                     <a class="asidebar" href="{{ url_for('portafolios') }}">Portafolio FFMM</a>
                 </li>
+                <li>
+                    <a class="asidebar" href=https://www.cmfchile.cl/portal/principal/613/w3-channel.html>Comisión del Mercado Finaniero </a>
+                </li>
             </ul>
         </nav>
         <div id="content">
